--- a/angular-client/src/index.html
+++ b/angular-client/src/index.html
@@ -8,6 +8,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- Phaser integration -->
+  <script src="assets/phaser.min.js"></script>
+  <script>
+  if (global === undefined) {
+    var global = window;
+  }
+</script>
+
 </head>
 <body>
   <app-root></app-root>
