--- a/angular-client/src/index.html
+++ b/angular-client/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Wick</title>
+  <title>Qwicki</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
